Fix to remove incompatibilities with Java 1.4. Added preOpen() method to PDFCreationListener and default implementation of the interface.